# Dictata

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: docktest.rs  hfsearch.rs  hotkeytest.rs  hwtest.rs  llmtest.rs  loopbacktest.rs  pastetest.rs  rectest.rs  sendhotkey.rs  transcribe.rs  traytest.rs
src/: audio.rs  config.rs  dock.rs  hardware.rs  history.rs  hotkey.rs  i18n.rs  lib.rs  llm.rs  main.rs  models.rs  modes.rs  paste.rs  platform.rs  settings.rs  settings_logic.rs  streaming.rs  transcriber.rs  tray.rs
