[package]
name = "dictata"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3"
cpal = "0.18.1"
eframe = "0.34.3"
enigo = "0.6"
global-hotkey = "0.7"
rfd = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
indexmap = { version = "2.14.0", features = ["serde"] }
num_cpus = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tray-icon = "0.21"
whisper-rs = "0.16.0"

[features]
# GPU transcription. Enabled by default; build with --no-default-features
# for a CPU-only binary that does not require the Vulkan SDK.
default = ["vulkan"]
vulkan = ["whisper-rs/vulkan"]

[target.'cfg(windows)'.dependencies]
raw-window-handle = "0.6"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
] }
