[package]
name = "dictata"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"

[dependencies]
arboard = "3"
cpal = "0.18.1"
eframe = "0.34.3"
enigo = "0.6"
global-hotkey = "0.7"
rfd = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
indexmap = { version = "2.14.0", features = ["serde"] }
num_cpus = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tray-icon = "0.21"
whisper-rs = "0.16.0"

[features]
# GPU transcription. Enabled by default; build with --no-default-features
# for a CPU-only binary that does not require the Vulkan SDK.
default = ["vulkan"]
vulkan = ["whisper-rs/vulkan"]

[profile.release]
opt-level = 3
lto = "fat"        # cross-crate inlining (whisper-rs, resampling): smaller, faster
codegen-units = 1  # better optimisation at the cost of a slower build
strip = true       # drop symbols: lighter shipped binary
# NB: `panic = "abort"` is intentionally NOT set. streaming.rs relies on
# std::panic::catch_unwind to keep the UI from hanging if the worker panics;
# aborting on panic would defeat that safety net.

[target.'cfg(windows)'.dependencies]
raw-window-handle = "0.6"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
] }
